--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 @charset "utf-8";
-body {
-margin: 0;  
-}
-.flex{
-display: flex;  
-}
+.clearfix::after {
+  content: “”;
+  display: block;
+  clear: both;
+  }
+  
 .red--box{
 height: 100px;
 background-color: #ff0000;
